# DatasetUtilities

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
DatasetUtilities/: utils.py
DatasetUtilities/ASOCA/: patientsCenterlinesToGraph.py
DatasetUtilities/CAT08/: patientsCenterlinesToGraph.py  utils.py  utils08.py
DatasetUtilities/CAT08/convert_to_hcatnetwork/: convert.py  convert_utils.py  patientsCenterlinesToGraph.py  utils08.py
DatasetUtilities/CAT08/utils/: utils.py
DatasetUtilities/Molinette/: patientsCenterlinesToGraphs.py  viewStefanatiCenterlines.py
DatasetUtilities/Molinette/utils/: util.py
HearticDatasetManager/: __init__.py  check_datasets_space_orientation.py  playground.py
HearticDatasetManager/ASOCA/: dataset.py  image.py
HearticDatasetManager/ASOCA/convert_to_hcatnetwork/: convert.py
HearticDatasetManager/CAT08/: dataset.py  image.py
HearticDatasetManager/CAT08/convert_to_hcatnetwork/: convert.py
HearticDatasetManager/Mmolinette/: utilsMolinette.py
HearticDatasetManager/affine/: __init__.py  affine.py
HearticDatasetManager/asoca/: __init__.py  dataset.py  image.py
HearticDatasetManager/asoca/convert_to_hcatnetwork/: utils.py
HearticDatasetManager/asoca/make_ostia_dataset/: __main__.py
HearticDatasetManager/asoca/preprocess_for_segmentor_by_luca_marsilio/: __init__.py  crop.py  crop_and_resample.py
HearticDatasetManager/asoca/zip_intersections/: __main__.py
HearticDatasetManager/cat08/: __init__.py  dataset.py  image.py
HearticDatasetManager/cat08/convert_to_hcatnetwork/: convert.py  types_checking.py  (+1 more)
HearticDatasetManager/image/: __init__.py  cat08.py  image.py
HearticDatasetManager/imagecas/: dataset.py  image.py
HearticDatasetManager/tools/: annotator_landmark_coronary_ostia.py
(+9 files in other folders)
