[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name         = "HearticDatasetManager"
version      = "2024.03.08-01"
description      = "Still under dev - do not use without permission of matteo.leccardi@polimi.it"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Matteo Leccardi", email = "matteo.leccardi@polimi.it"},
]
keywords = ["Utils", "Datasets", "Heartic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Software requirements
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scikit-learn",
    "vtk",
    "nibabel",
    "SimpleITK",
    "hcatnetwork @ git+https://github.com/AAMIASoftwares-research/HCATNetwork.git@main"
]


# URLs
[project.urls]
homepage = "https://github.com/AAMIASoftwares-research/DatasetUtilities"
documentation = "https://github.com/AAMIASoftwares-research/DatasetUtilities"
repository = "https://github.com/AAMIASoftwares-research/DatasetUtilities.git"
institution = "https://www.polimi.it/"
institution-lab = "https://www.b3lab.deib.polimi.it/"
bug-tracker = "https://github.com/AAMIASoftwares-research/DatasetUtilities/issues"


# Define Package(s)
[tool.setuptools.packages.find]
include = ["HearticDatasetManager*"]
exclude = ["HearticDatasetManager.Molinette*"]







### old stuff ###
#[options]
#packages = find:
#zip_safe = True
#include_package_data = True
#python_requires  = >=3.10

#[options.package_data]
#* = README.md
#hcatnetwork = *.json, *.txt
